# capsec

./: .capsec.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  ergonomics_spec.md
.auths/: allowed_signers
.github/workflows/: ci.yml  verify-commits.yml
crates/capsec/: Cargo.toml  README.md
crates/capsec-core/: Cargo.toml  README.md
crates/capsec-core/src/: attenuate.rs  cap.rs  cap_provider.rs  error.rs  has.rs  lib.rs  permission.rs  prescript.rs  root.rs  runtime.rs
crates/capsec-deep/: README.md  libc_calls
crates/capsec-deep/src/: libc_table.rs  main.rs
crates/capsec-deep/tests/fixtures/: libc_calls.rs
crates/capsec-example-db/: Cargo.toml  README.md
crates/capsec-example-db/examples/: duck_db_app.rs
crates/capsec-example-db/src/: lib.rs
crates/capsec-macro/: Cargo.toml  README.md
crates/capsec-macro/src/: lib.rs  resolve.rs
crates/capsec-proof/: Cargo.toml  README.md
crates/capsec-proof/src/: lib.rs  runtime_mirror.rs
crates/capsec-proof/tests/: proptest_lattice.proptest-regressions  proptest_lattice.rs  sync_perms_toml.rs
crates/capsec-std/: Cargo.toml  README.md
crates/capsec-std/src/: env.rs  file.rs  fs.rs  lib.rs  net.rs  process.rs
crates/capsec-tests/: Cargo.toml  README.md
crates/capsec-tests/tests/: scope_escapes.rs  type_system.rs
crates/capsec-tests/tests/compile_fail/: has_forgery_capsec_std_env.rs  has_forgery_capsec_std_env.stderr  has_forgery_capsec_std_fs.rs  has_forgery_capsec_std_fs.stderr  has_forgery_god_mode.rs  has_forgery_god_mode.stderr  has_forgery_loop.rs  has_forgery_loop.stderr  has_forgery_panic.rs  has_forgery_panic.stderr  has_forgery_process_exit.rs  has_forgery_process_exit.stderr  sealed_has_no_external_impl.rs  sealed_has_no_external_impl.stderr  sealed_impl_from_outside.rs  sealed_impl_from_outside.stderr
crates/capsec-tokio/: Cargo.toml  README.md
crates/capsec-tokio/src/: file.rs  fs.rs  lib.rs  net.rs  process.rs  task.rs
crates/capsec-tokio/tests/: async_io.rs
crates/capsec/examples/: async_context.rs  audit_only.rs  audit_trail.rs  context_pattern.rs  context_struct.rs  domain_wrapper.rs  dual_authorization.rs  incremental_migration.rs  layered_app.rs  scoped_capabilities.rs  server_revocation.rs  timed_migration.rs  type_enforcement.rs
crates/capsec/src/: lib.rs
crates/capsec/tests/compile_fail/: async_create_cannot_read.rs  async_create_cannot_read.stderr  async_open_cannot_write.rs  async_open_cannot_write.stderr  cap_is_not_send.stderr  cap_is_not_sync.stderr  capsec_std_requires_cap.stderr  capsec_std_wrong_cap.stderr  context_bad_field.rs  context_bad_field.stderr  context_duplicate_perm.rs  context_duplicate_perm.stderr  context_tuple_struct.rs  context_tuple_struct.stderr  create_cannot_read.rs  create_cannot_read.stderr  dual_key_cap_is_not_send.rs  dual_key_cap_is_not_send.stderr  logged_cap_is_not_send.rs  logged_cap_is_not_send.stderr  main_no_params.rs  main_no_params.stderr  main_wrong_type.rs  main_wrong_type.stderr  open_cannot_write.rs  open_cannot_write.stderr  requires_concrete_no_on.rs  requires_concrete_no_on.stderr  requires_on_wrong_type.rs  requires_on_wrong_type.stderr  runtime_cap_is_not_send.rs  runtime_cap_is_not_send.stderr  sealed_permission_no_external_impl.rs  sealed_permission_no_external_impl.stderr  timed_cap_is_not_send.rs  timed_cap_is_not_send.stderr
crates/cargo-capsec/: Cargo.toml  README.md
crates/cargo-capsec/bench/: README.md  audit_wild.py  crates.toml
crates/cargo-capsec/src/: authorities.rs  baseline.rs  cli.rs  config.rs  cross_crate.rs  deep.rs  detector.rs  diff.rs  discovery.rs  export_map.rs  lib.rs  main.rs  parser.rs  reporter.rs  scanner.rs
crates/cargo-capsec/tests/: integration.rs
crates/cargo-capsec/tests/fixtures/cross_crate/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate/helper/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_build_script/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_build_script/build_dep/: build.rs
crates/cargo-capsec/tests/fixtures/cross_crate_build_script/build_dep/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_chain/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_chain/mid/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_clean/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_clean/pure_lib/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_ffi/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/cross_crate_ffi/ffi_dep/src/: lib.rs
crates/cargo-capsec/tests/fixtures/workspace_to_workspace/app/src/: lib.rs
crates/cargo-capsec/tests/fixtures/workspace_to_workspace/core_lib/src/: lib.rs
docs/blog/: ecosystem-audit-report.md
docs/contributing/: compile-fail-tests.md
proofs/: Capsec.lean  README.md  lake-manifest.json  lakefile.lean  perms.toml
proofs/.lake/: lakefile.olean  lakefile.olean.trace
proofs/Capsec/: Has.lean  Perm.lean  Soundness.lean
proofs/scripts/: gen_perm.py
scripts/releases/: 1_github.py  2_crates.py
