[workspace]
resolver = "2"
members = [
    "crates/cargo-capsec",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bordumb/capsec"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
syn = { version = "2", features = ["full", "visit", "parsing", "printing", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# File discovery
walkdir = "2"
globset = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.7"

# Output
colored = "3.1.1"

# Testing
insta = { version = "1", features = ["yaml"] }
