[workspace]
resolver = "2"
members = [
    "crates/capsec-core",
    "crates/capsec-macro",
    "crates/capsec-std",
    "crates/capsec",
    "crates/cargo-capsec",
    "crates/capsec-tokio",
    "crates/capsec-tests",
]
exclude = [
    "crates/capsec-example-db",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.85.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/bordumb/capsec"

[workspace.dependencies]
# Core
thiserror = "2"

# Proc macros
syn = { version = "2", features = ["full", "visit", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# CLI
clap = { version = "4", features = ["derive"] }

# File discovery
walkdir = "2"
globset = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.7"

# Output
colored = "3.1.1"

# Testing
trybuild = "1"
insta = { version = "1", features = ["yaml"] }

# Internal crates
capsec-core = { path = "crates/capsec-core", version = "0.1.0" }
capsec-macro = { path = "crates/capsec-macro", version = "0.1.0" }
capsec-std = { path = "crates/capsec-std", version = "0.1.0" }
capsec-tokio = { path = "crates/capsec-tokio", version = "0.1.0" }
