[package]
name = "capsec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core capability types for compile-time capability-based security in Rust"
keywords = ["security", "capability", "type-system", "least-privilege"]
categories = ["rust-patterns", "no-std::no-alloc"]

[dependencies]
thiserror.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(doc)'] }
