[package]
name = "capsec-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Formal verification and property tests for capsec's permission lattice"

[dependencies]
toml = { workspace = true }

[dev-dependencies]
proptest = "1"
toml = { workspace = true }
