[package]
name = "capsec-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Adversarial security tests for capsec"

[dependencies]
capsec-core = { path = "../capsec-core" }
capsec-std = { path = "../capsec-std" }
capsec-macro = { path = "../capsec-macro" }
capsec = { path = "../capsec" }
cargo-capsec = { path = "../cargo-capsec" }

[dev-dependencies]
trybuild = "1"
