[package]
name = "cargo-capsec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Static capability audit for Rust — find out what your code can do to the outside world"
keywords = ["security", "capability", "audit", "supply-chain", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cargo-capsec"
path = "src/main.rs"

[dependencies]
clap.workspace = true
syn.workspace = true
proc-macro2.workspace = true
walkdir.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
colored.workspace = true
capsec-core.workspace = true
capsec-std.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3"
capsec-core.workspace = true
